--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
     "less": "^3.8.0",
+    "metismenu": "^3.0.3",
     "node-sass": "^4.9.2",
     "npm": "^5.10.0",
     "postcss-loader": "^2.1.6",
